# MiroFish

./: .env.example  .gitignore  ANALYSIS_REPORT.md  CLAUDE.md  README-EN.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  auth.py  graph.py  pipeline.py  report.py  (+1 more)
backend/graphiti-db/: docker-compose.yml
backend/scripts/: append_to_existing_graph_smoke.py  graphiti_smoke_add_one.py  phase3_profile_smoke.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  smoke_rehearsal_v1.py
backend/tests/: conftest.py  test_assumptions_loader.py  test_auth_api.py  test_graph_api.py  test_graph_builder.py  test_graph_builder_v2.py  test_graphiti_entity_reader.py  test_graphiti_graph_memory_updater.py  test_graphiti_tools.py  test_graphiti_utils.py  test_oasis_profile_generator.py  test_ontology_generator.py  test_ontology_normalize.py  test_pipeline_adapters.py  test_pipeline_api.py  test_pipeline_orchestrator.py  test_rehearsal_5runs.py  test_report_agent.py  test_report_api.py  test_simulation_activity.py  test_simulation_config.py  test_simulation_config_generator.py  test_simulation_crud.py  test_simulation_entities.py  test_simulation_interview.py  test_simulation_ipc.py  test_simulation_ipc_factory.py  test_simulation_ipc_integration.py  test_simulation_ipc_redis.py  test_simulation_ipc_subprocess.py  test_simulation_lifecycle.py  test_simulation_manager.py  test_simulation_profiles.py  test_simulation_runner.py  test_text_processor.py  test_user_model.py
(+130 files in other folders)
