[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish - 简洁通用的群体智能引擎，预测万物"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # 核心框架
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    # LLM 相关
    "openai>=1.0.0",
    # Zep Cloud — Graphiti 마이그레이션 완료 후(Phase 6) 제거 예정
    "zep-cloud==3.13.0",
    # Graphiti (Zep OSS 코어) — knowledge graph 백엔드. Phase 0~6 마이그레이션.
    # camel-oasis 0.2.5가 neo4j==5.23.0을 고정하므로 동일 버전 사용. Graphiti는
    # bolt protocol만 쓰므로 5.20+에서 동작.
    "graphiti-core>=0.4.0",
    # YAML 파서 (assumptions YAML 로더용)
    "PyYAML>=6.0",
    # OASIS 社交媒体模拟
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    # 文件处理
    "PyMuPDF>=1.24.0",
    # 编码检测（支持非UTF-8编码的文本文件）
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.86.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
